# learn-dioxus

./: Cargo.toml  README.md  flake.nix
assets/: main.scss
src/: csv.rs  fukuoka.rs  high_five.rs  lib.rs  main.rs  simple_main.rs
src/post/: action.rs  meta.rs  mod.rs  title.rs  vote.rs
