[package]
name = "learn-dioxus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2", features = ["desktop"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "0.5"
lazy_static = "1.4"
regex = "1.5"
